<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Things Counter</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Things Counter</string>
    <string name="nav_header_subtitle" translatable="false">jjj</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="title_home" translatable="false">Things Counter</string>
    <string name="title_dashboard">Disabled Things</string>
    <string name="title_notifications">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_positiv_summary_txt">Positive Summary</string>
    <string name="home_neutral_summary_txt">Neutral Summary</string>
    <string name="home_negative_summary_txt">Negative Summary</string>
    <string name="name_doublepoint">Name :</string>
    <string name="count_slach_goal_doublepoint">Count / Goal :</string>
    <string name="day_doublepoint">Day :</string>
    <string name="show_history_btn_txt">Show History</string>
    <string name="reset_history_btn_txt">Reset History</string>
    <string name="delete_thing_btn_txt">Delete</string>
    <string name="edit_thing_btn_txt">Edit</string>
    <string name="catagory_doublepoint">Category :</string>
    <string name="goal_doublepoint">Goal :</string>
    <string name="type_doublepoint">Type :</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="neutral">Neutral</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="contunue">Continue</string>
    <string name="proceed">Proceed</string>
    <string name="erase">Erase</string>
    <string name="add">Add</string>
    <string name="more_details">........ More Details ........</string>
    <string name="name_hint">Enter Name Here</string>
    <string name="options">Options</string>
    <string name="allow_notifications">Allow Notifications</string>
    <string name="notification_time">_Notification Time</string>
    <string name="notification_type">_Notification Type</string>
    <string name="ongoing">Ongoing</string>
    <string name="daily">Daily Reminder</string>
    <string name="data_to_show">Type Of Data To Show</string>
    <string name="completed_total">Completed / Total</string>
    <string name="counts_goals">Counts / Goals</string>
    <string name="current_cycle">Current Day</string>
    <string name="date_doublepoint">Date :</string>
    <string name="count_doublepoint">Count :</string>
    <string name="nr_day_doublepoint">#Day :</string>
    <string name="reset_time">Reset Time</string>
    <string name="test_ads" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="edit_thing">Edit</string>
    <string name="add_btn_txt">Add</string>
    <string name="language">Language</string>
    <string name="home">Home</string>
    <string name="change">Change</string>
    <string name="go_back">Go Back</string>
    <string name="disabled_things">Disabled Things</string>
    <string name="status_doublepoint">Status :</string>
    <string name="enabled">Enabled</string>
    <string name="enable">Enable</string>
    <string name="previous_counts">Previous Counts</string>
    <string name="previous_goals">Previous Goals</string>
    <string name="completed">Completed</string>
    <string name="minus_sign" translatable="false">-</string>
    <string name="slash" translatable="false">/</string>
    <string name="plus_sign" translatable="false">+</string>
    <string name="history_data">History Data</string>
    <string name="completion_ratio">Completion Ratio</string>
    <string name="total_number">Total Number</string>
    <string name="allow_overcounting">Allow Overcounting</string>


    <string name="allow_overcounting_diag_msg">If you proceed all current Data with Counts larger than their Goals will
        be set back to the Value of their Goals
    </string>
    <string name="delete_thing_diag_msg">If you proceed the Thing and its History will be removed
    </string>
    <string name="delete_thing_prompt_delete_prev_diag_msg">Do you wish to remove the Thing\'s previous History Data
        from
        the \'History Data\' Page
    </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reset_one_his_diag_msg">If you proceed the Thing\'s previous History Data will be deleted</string>
    <string name="things_display_type">How To Display Things ?</string>
    <string name="notype">Without A Type</string>
    <string name="positive_negative_neutral">Positive-Negative-Neutral</string>
    <string name="enabled_preview">Enabled Preview</string>
    <string name="disabled_preview">DIsabled Preview</string>
    <string name="color_doublepoint">Color :</string>
    <string name="change_color">Change Color</string>
    <string name="choose_color">Choose Color</string>
    <string name="preview">Preview</string>
    <string name="all">All</string>
    <string name="no_data_to_show">No Data To Show</string>


    <string name="notifications_doublepoint">Notification :</string>
    <string name="daily_reset_doublepoint">Daily Reset :</string>
    <string name="allow_daily_reset">Allow Daily Reset</string>
    <string name="mode">Mode</string>


    <string name="settings_allow_notificaitons_key" translatable="false">settings_allow_notificaitons</string>
    <string name="stng_allow_overcounting_key" translatable="false">settings_allow_overcounting</string>
    <string name="stng_posnegneu_key" translatable="false">settings_posnegneu</string>
    <string name="settings_notoficaiton_ongoing_key" translatable="false">settings_notoficaiton_ongoing</string>
    <string name="setting_notification_time_key" translatable="false">setting_notification_time</string>
    <string name="settings_notification_display_type_key" translatable="false">settings_notification_display_type</string>
    <string name="settings_allow_daily_reset_key" translatable="false">settings_allow_daily_reset</string>
    <string name="settings_daily_reset_time_key" translatable="false">settings_daily_reset_time</string>
    <string name="settings_languagees_key" translatable="false">settings_languagees</string>


    <string-array name="display_types_arr">
        <item>@string/completed_total</item>
        <item>@string/counts_goals</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_settings">Settings :</string>
    <string name="graveyard">Graveyard</string>
    <string name="stats">Stats</string>
    <string name="disabled">Disabled</string>
    <string name="history">History</string>
    <string name="add_warning_msg">Please Fill EveryThing Properly</string>
    <string name="filter">Filter</string>


    <string-array name="languages_arr">
        <item>English</item>
        <item>German</item>
        <item>Arabic</item>
    </string-array>
    <string-array name="Catagories">
        <item>Nutrition</item>
        <item>Entertainment</item>
        <item>Necessity</item>
        <item>Addiction</item>
        <item>No Category</item>
    </string-array>
    <string-array name="langs">
        <item>en</item>
        <item>ar</item>
        <item>de</item>
    </string-array>
    <string-array name="colors_arr">
        <item>Yellow</item>
        <item>Orange</item>
        <item>Brown</item>
        <item>DarkBlue</item>
        <item>Blue</item>
        <item>Purple</item>
        <item>Pink</item>
        <item>Green</item>
        <item>Red</item>
        <item>Gray</item>
        <item>Black</item>
        <item>DarkOrange</item>
        <item>MilitaryGreen</item>
        <item>DarkGreen</item>
        <item>DarkerBlue</item>
        <item>Morasaki</item>
        <item>DarkRed</item>
    </string-array>
    <string-array name="posnegneu_arr">
        <item>@string/positive_negative_neutral</item>
        <item>@string/notype</item>
    </string-array>

</resources>
