<PreferenceScreen

        xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:layout="@android:layout/preference_category"
            android:title="Notification :">

        <SwitchPreference
                android:key="@string/settings_allow_notificaitons_key"
                android:title="@string/allow_notifications"
                android:defaultValue="false"/>
        <SwitchPreference
                android:dependency="@string/settings_allow_notificaitons_key"
                android:key="@string/settings_notoficaiton_ongoing_key"
                android:title="@string/ongoing"
                android:defaultValue="true"/>
        <Preference android:dependency="@string/settings_notoficaiton_ongoing_key"
                    android:title="@string/notification_time"
                    android:key="@string/setting_notification_time_key"
                    android:selectable="true"/>
        <ListPreference
                android:defaultValue="1"
                android:title="@string/things_display_type" android:entries="@array/display_types_arr"
                android:entryValues="@array/display_types_arr"
                android:key="@string/settings_notification_display_type_key"
                android:dependency="@string/settings_allow_notificaitons_key"/>
    </PreferenceCategory>

    <PreferenceCategory android:layout="@android:layout/preference_category"
            android:title="@string/daily_reset_doublepoint">

        <SwitchPreference
                android:defaultValue="false"
                android:key="@string/settings_allow_daily_reset_key" android:title="@string/allow_daily_reset"/>
        <Preference android:dependency="@string/settings_allow_daily_reset_key"
                    android:title="@string/reset_time"
                    android:key="@string/settings_daily_reset_time_key"
                    android:selectable="true" android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:id="@+id/preference"/>
    </PreferenceCategory>
    <PreferenceCategory android:layout="@android:layout/preference_category"
                        android:title=" ">

        <SwitchPreference
                android:defaultValue="false"
                android:title="@string/allow_overcounting" android:key="@string/stng_allow_overcounting_key"/>
        <ListPreference
                android:defaultValue="1"
                android:entries="@array/posnegneu_arr"
                android:entryValues="@array/posnegneu_arr" android:key="@string/stng_posnegneu_key"
                android:title="@string/mode"/>
        <ListPreference
                android:defaultValue="1"
                android:title="@string/language" android:entries="@array/languages_arr"
                android:entryValues="@array/languages_arr" android:key="@string/settings_languagees_key"/>
    </PreferenceCategory>


</PreferenceScreen>
