<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context=".MainActivity">

    <item
            android:id="@+id/things_nav"

            android:icon="@drawable/ic_home_black_24dp"

            android:title="@string/title_home"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/disabled_nav"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/stats"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/charts_nav"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/graveyard"
    app:showAsAction="ifRoom"/>



    <item
            android:id="@+id/options_nav2"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_notifications"
            app:showAsAction="ifRoom"/>


</menu>
