<?xml version="1.0" encoding="utf-8"?>

<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/black_pr"
		android:backgroundTintMode="src_over"
		android:foregroundTintMode="src_over" android:backgroundTint="@color/red_trans"
		android:id="@+id/add_main_layout">


	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/AddTableLayout"
			android:orientation="vertical"
	>

		<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
					  android:layout_marginBottom="5dp" android:layout_margin="5dp" android:paddingBottom="9dp"
					  android:paddingTop="9dp">
			<TextView
					android:text="@string/name_doublepoint" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:textColor="@color/gray_lt1"
					android:textSize="18sp"
					android:paddingStart="7dp"/>
			<EditText
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:inputType="textPersonName"
					android:ems="10"
					android:id="@+id/AddThingNameTxt" android:hint="@string/name_hint" android:autofillHints=""
					android:textColor="@color/gray_lt2"
					android:layout_weight="1" android:textAlignment="center" android:textColorHint="@color/gray_dk"/>
		</LinearLayout>
		<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
					  android:layout_margin="5dp" android:paddingBottom="9dp" android:paddingTop="9dp">
			<TextView
					android:text="@string/catagory_doublepoint"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:id="@+id/textView12"
					android:textColor="@color/gray_lt1" android:textSize="18sp"
					android:layout_weight="0" android:paddingLeft="7dp"/>
			<com.google.android.material.chip.Chip
					android:layout_width="140dp"
					android:layout_height="wrap_content" android:id="@+id/add_main_ctg_chip" android:layout_weight="1"
					android:theme="@style/Base.Theme.MaterialComponents" android:layout_marginEnd="25dp"
					android:layout_marginStart="25dp" style="@style/Widget.MaterialComponents.Chip.Action"
					android:backgroundTint="@color/black_lt" android:textColor="@color/gray_lt2"/>
		</LinearLayout>
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content" android:id="@+id/AddColorRow"
				android:layout_marginEnd="5dp" android:layout_marginTop="5dp" android:layout_marginStart="5dp"
				android:visibility="visible" android:paddingBottom="9dp" android:paddingTop="9dp">
			<TextView
					android:text="@string/type_doublepoint"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:id="@+id/textView10" android:textSize="18sp"
					android:textColor="@color/gray_lt1" android:layout_weight="0"
					android:paddingTop="9dp" android:paddingStart="7dp"/>
			<com.google.android.material.chip.Chip
					android:layout_width="140dp"
					android:layout_height="match_parent" android:id="@+id/add_main_type_chip" android:layout_weight="1"
					style="@style/Widget.MaterialComponents.Chip.Action"
					android:theme="@style/Base.Theme.MaterialComponents" android:layout_marginEnd="25dp"
					android:layout_marginStart="55dp" android:backgroundTint="@color/black_lt"
					android:textColor="@color/gray_lt2"/>
		</LinearLayout>
		<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
					  android:layout_marginBottom="3dp" android:layout_marginEnd="5dp"
					  android:layout_marginStart="5dp"
					  android:paddingBottom="9dp" android:paddingTop="9dp">
			<TextView
					android:text="@string/goal_doublepoint"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:id="@+id/textView11"
					android:textColor="@color/gray_lt1" android:textSize="18sp"
					android:layout_weight="0" android:paddingStart="7dp"/>
			<EditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="numberSigned|number|numberDecimal"
					android:ems="10"
					android:id="@+id/AddGoadTxt" android:textColor="@color/gray_lt2" android:text="10"
					android:importantForAutofill="no" android:layout_weight="1" android:textAlignment="center"/>
		</LinearLayout>
		<LinearLayout
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/BtnsLinLay">
			<Button
					android:text="@string/cancel"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:id="@+id/AddThingCancelBtn"
					android:paddingEnd="3dp"
					style="@style/Widget.AppCompat.Button"
					android:paddingStart="3dp" android:layout_weight="1"
					android:background="@color/colorPrimary" android:layout_marginBottom="15dp"
					android:layout_marginTop="15dp" android:layout_marginEnd="3dp"
					android:layout_marginStart="7dp" android:textColor="@color/gray_lt1"
					android:backgroundTint="@color/red_trans"/>
			<Button
					android:text="@string/add"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:id="@+id/AddThingBtn"
					style="@style/Widget.AppCompat.Button.Borderless"
					android:layout_marginStart="3dp"
					android:layout_weight="1"
					android:background="@color/colorPrimary"
					android:layout_marginBottom="15dp" android:layout_marginTop="15dp"
					android:layout_marginEnd="7dp" android:textColor="@color/gray_lt1"
					android:backgroundTint="@color/red_trans"/>
		</LinearLayout>
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content" android:baselineAligned="false">
			<LinearLayout
					android:orientation="vertical"
					android:layout_width="0dp"
					android:layout_height="match_parent" android:id="@+id/AddWarningLayout"
					android:layout_weight="1">
			</LinearLayout>
		</LinearLayout>
		<include layout="@layout/thing_color_picker_popup" android:layout_width="match_parent"
				 android:layout_height="wrap_content"
				 android:id="@+id/ColorPickerIncludedLay" android:visibility="visible">

		</include>
	</LinearLayout>


</ScrollView>