<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:id="@+id/OneHistoryPopupMainLayout" android:padding="10dp"
              android:background="@color/gray_trans"
>

    <Button
            android:text="@string/go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/OneHisBackBtn"
            android:background="@android:drawable/screen_background_dark_transparent"
            android:textColor="@android:color/white"/>
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    >

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/current_cycle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView16" android:layout_weight="1"
                    android:textAlignment="center" android:textSize="18sp" android:textColor="@android:color/white"
                    android:shadowColor="@android:color/black" android:shadowDx="1" android:shadowDy="1"
                    android:shadowRadius="1"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent" android:paddingTop="3dp"
                  android:paddingBottom="3dp">
            <TextView
                    android:text="@string/count_slach_goal_doublepoint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView18"
                    android:textColor="@android:color/white"
                    android:background="@android:drawable/screen_background_dark_transparent"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/CurrentCycleCountGoalTxt"
                    android:background="@android:drawable/screen_background_dark_transparent"
                    android:textColor="@android:color/white" android:layout_weight="1" android:textAlignment="center"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent" android:paddingTop="3dp"
                  android:paddingBottom="3dp">
            <TextView
                    android:text="@string/date_doublepoint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView222"
                    android:textColor="@android:color/white"
                    android:background="@android:drawable/screen_background_dark_transparent"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/CurrentCycleDateTxt"
                    android:background="@android:drawable/screen_background_dark_transparent"
                    android:textColor="@android:color/white" android:layout_weight="1" android:textAlignment="center"/>
        </TableRow>
    </TableLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:padding="2dp" android:paddingTop="3dp"
                android:layout_weight="0">
            <TextView
                    android:text="@string/nr_day_doublepoint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_weight="1"
                    android:textAlignment="center" android:layout_marginEnd="1dp"
                    android:background="@android:drawable/screen_background_light_transparent"
                    android:backgroundTint="@android:drawable/screen_background_dark_transparent"
                    android:textColor="@android:color/white"/>
            <TextView
                    android:text="@string/date_doublepoint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_weight="1"
                    android:textAlignment="center" android:layout_marginRight="1dp" android:layout_marginLeft="1dp"
                    android:background="@android:drawable/screen_background_light_transparent"
                    android:backgroundTint="@android:drawable/screen_background_dark_transparent"
                    android:textColor="@android:color/white"/>
            <TextView
                    android:text="@string/count_doublepoint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_weight="1"
                    android:textAlignment="center" android:layout_marginRight="1dp" android:layout_marginLeft="1dp"
                    android:background="@android:drawable/screen_background_light_transparent"
                    android:backgroundTint="@android:drawable/screen_background_dark_transparent"
                    android:textColor="@android:color/white"/>
            <TextView
                    android:text="@string/goal_doublepoint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_weight="1"
                    android:textAlignment="center" android:layout_marginStart="1dp"
                    android:background="@android:drawable/screen_background_light_transparent"
                    android:backgroundTint="@android:drawable/screen_background_dark_transparent"
                    android:textColor="@android:color/white"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/OneHistoryRecyclerView"
                android:layout_marginTop="5dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:visibility="visible" android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>